integration/src/test/resources/templates/invalid-target/wasm-browser/build.gradle
kotlin {
    wasmJs {
        browser()
    }
}

benchmark {
    targets {
        register("wasmJs")
    }
}